(search) Fix rendering on site overview, more dense serp layout on mobile

--- a/code/services-application/search-service/resources/static/search/css/style.css
+++ b/code/services-application/search-service/resources/static/search/css/style.css
@@ -1173,10 +1173,6 @@ video {
   background-color: rgb(254 252 232 / var(--tw-bg-opacity, 1));
 }
 
-.p-0 {
-  padding: 0px;
-}
-
 .p-1 {
   padding: 0.25rem;
 }
